--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -14,7 +14,7 @@ html, body {
 }
 */
 html, body {
-  background-color: ##4c76b2; /* dark blue background */
+  background-color: #4c76b2; /* dark blue background */
   color: #f5f5f5; /* light gray text */
 }
 
